# gpt_plugin_template_rs

./: .gitignore  Cargo.toml  README.md
bruno/: bruno.json  get_light_states.bru  light_color.bru  light_control.bru
src/: control.rs  main.rs  states.rs  utils.rs
src/metadata_files/: ai-plugin-lobechat.json  ai-plugin.json  openapi-lobechat.json  openapi.json
