[package]
name = "gpt_plugin_template_rs"
version = "0.1.0"
edition = "2021"
authors = ["ifsheldon <rust@reify.ing>"]
license-file = "LICENSE"


[dependencies]
# For CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web framework
axum = "0.7"
# For middlewares and services
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["auth", "cors", "limit", "fs"] }
# For serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# For logging
log = "0.4"
env_logger = "0.11"

[profile.release] # to reduce binary size
opt-level = "z"
strip = true
lto = true